compiler/lume_typech/src/tests/check/snapshots/lume_typech__tests__check__construct__typech_construct_struct_type_defalt_incomp.snap
---
source: compiler/lume_typech/src/tests/check/construct.rs
description: "struct A {\n            foo: Boolean = 0;\n        }"
---
× error[LM4001]: mismatched types
   ╭───────────
 1 │ struct A {
 2 │             foo: Boolean = 0;
   │                            ^ expected type Boolean, but found type Int32...
 3 │         }
   ∶ 
 1 │ struct A {
 2 │             foo: Boolean = 0;
   │                  ^^^^^^^ ...because of type defined here
 3 │         }
   ╰──
   help: expected type Boolean
            found type Int32
